styles.css
:root {
  --color-pink-purple: hsl(298, 97%, 30%);
  --color-lavendar: hsl(249, 99%, 64%);
  --color-purple: hsl(278, 94%, 30%);
  --color-light-gray: hsl(270, 3%, 87%);
  --color-gray: hsl(212, 12%, 71%);
  --color-blue-gray: hsl(214, 12%, 74%);
  --color-washed-black: hsl(0, 0%, 15%);
  --color-dark-purple: hsl(278, 68%, 11%);
  --color-red: hsl(0, 100%, 66%);
}

* {
  margin: 0;
  box-sizing: border-box;
  font-family: "Space Grotesk", sans-serif;
  font-weight: 500;
  letter-spacing: 0.1rem;
}

body {
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 18px;
}

.card-front,
.card-back {
  width: 450px;
  height: 240px;
  border-radius: 10px;
}

.background-section {
  position: fixed;
  z-index: 0;
  left: 0;
  background: linear-gradient(
    to bottom,
    var(--color-dark-purple),
    var(--color-pink-purple)
  );
}

.container {
  z-index: 1;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 100px;
}

.card-section {
  min-width: 600px;
  max-width: 600px;
  display: flex;
  flex-direction: column;
  gap: 40px;
  position: relative;
}

.form-section {
  width: 40%;
  margin-right: 60px;
}

.card-front {
  position: relative;
  margin-left: 30px;
  margin-right: fixed;
  display: inline-block;
  color: white;
  box-shadow: 5px 50px 75px rgba(0, 0, 0, 0.2);
}

.card-front-image {
  display: block; /* Removes bottom space under the image */
  width: 100%;
  height: auto;
}

.card-profile-container {
  position: absolute;
  top: 30px;
  left: 30px;
  display: flex;
  align-items: center;
  gap: 15px;
}

.card-front-logo {
  position: absolute;
  top: 30px;
  left: 30px;
}

.card-front-digits {
  position: absolute;
  margin: auto;
  left: 0;
  right: 0;
  bottom: 60px;
  font-size: 28px;
  font-weight: 400;
  text-align: center;
  letter-spacing: 0.2rem;
}

.card-front-name,
.card-front-date {
  font-size: 14px;
  font-weight: 400;
}

.card-front-name {
  position: absolute;
  left: 30px;
  bottom: 20px;
}

.card-front-date {
  position: absolute;
  right: 30px;
  bottom: 20px;
}

.card-back {
  position: relative;
  display: inline-block;
  width: auto;
  margin-left: auto;
  margin-right: 30px;
  box-shadow: 5px 50px 75px rgba(0, 0, 0, 0.15);
}

.card-back-num {
  position: absolute;
  bottom: 110px;
  right: 45px;
  color: white;
  font-size: 14px;
  margin-right: 15px;
}

.form-section,
.completed-section {
  min-width: 400px;
  max-width: 400px;
}

form {
  display: flex;
  flex-direction: column;
  gap: 25px;
}

.card-name-container,
.card-number-container,
.card-exp-date-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.card-name-label,
.card-number-label,
.card-exp-date-label,
.card-cvc-label {
  font-size: 12px;
}

input {
  height: 45px;
  border-radius: 10px;
  border: 1.5px solid var(--color-light-gray);
  outline: none;
}

input:focus {
  border-color: var(--color-purple);
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Hide spin buttons in Firefox */
input[type="number"] {
  -moz-appearance: textfield;
}

#card-name,
#card-number,
#card-cvc,
#card-exp-date-month,
#card-exp-date-year {
  font-size: 16px;
  opacity: 50%;
  padding-left: 15px;
}

#card-number {
  margin-bottom: 0;
}

.form-bottom-section {
  display: flex;
  gap: 20px;
}

.form-bottom-container {
  display: flex;
  gap: 10px;
}

#card-exp-date-month,
#card-exp-date-year {
  width: 75px;
}

.form-cvc-container,
.form-exp-date-container {
  display: flex;
  flex-direction: column;
}

.form-cvc-container {
  width: 100%;
}

.card-exp-date-container {
  display: flex;
}

#card-exp-date-month,
#card-exp-date-year,
#card-cvc {
  margin-top: 10px;
}

button {
  height: 55px;
  margin-top: 15px;
  border: none;
  border-radius: 7px;
  background: var(--color-dark-purple);
  color: white;
  font-size: 16px;
}

.error {
  border-color: var(--color-red) !important;
}

.error-message {
  display: none;
  color: var(--color-red);
  font-size: 10px;
}

.error-message.show {
  display: block;
}

.form-bottom-section input {
  margin-bottom: 10px;
}

.completed-section {
  display: none;
  flex-direction: column;
  align-items: center;
  gap: 30px;
  margin-right: 60px;
}

.completed-image {
  width: 65px;
}

.completed-heading {
  font-size: 22px;
}

.completed-message {
  font-size: 13px;
  opacity: 50%;
}

.completed-text-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 15px;
}

.completed-section button {
  width: 90%;
}

